--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         // ⭐ HƯỚNG DẪN: Đặt 5 ảnh vào cùng thư mục với file HTML này
         // Đổi tên file bên dưới thành tên ảnh của bạn (ví dụ: 'anh1.jpg', 'anh2.png', ...)
-        const photoFiles = ['1.jpg', '2.jpg', '3.jpg', '4.jpg', '5.jpg'];
+        const photoFiles = ['IMG_0253.jpeg', 'IMG_0254.jpeg', 'IMG_0255.jpeg', 'IMG_0257.jpeg', 'IMG_0258.jpeg'];
         
         const loader = new THREE.TextureLoader();
         const imageColors = ['#FF6B6B', '#4ECDC4', '#45B7D1', '#FFA07A', '#98D8C8'];
